--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,3 +35,9 @@ footer {
   font-size: x-small;
   color:lightgray;
 }
+
+.journalselector {
+  font-size:large;
+  text-align: center;
+  margin: 10em 10em 10em 10em;
+}
