Possible bug in JS

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,7 +36,7 @@ footer {
   color:lightgray;
 }
 
-.journalselector {
+.journalselectorform {
   font-size:large;
   text-align: center;
   margin: 10em 10em 10em 10em;
