--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,6 +39,6 @@ footer {
 .journalselectorform {
   font-size:large;
   text-align: center;
-  margin: 10em 10em 10em 10em;
+  padding: 5em 10em ;
   background-color: lightgray;
 }
