Splitting for better layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
         </ul>
       </div>
       <div class="footer-col">
-        <p><a href="/Disclaimer.html">Disclaimer</a></p>
+        <p>All information provided on this page and in the corresponding <a href="{{ site.github}}" alt="Github URL for this site">Github repository</a> is available under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" alt="link to CC-BY-NC license"><img src="{{ "assets/cc-by-nc.png" | relative_url }} alt="CC-BY-NC"/>CC-BY-NC license</a>.</p>
       </div>
     </div>
 
