--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <ul class="contact-list">
-            <li class="p-name">{{ site.version | escape }} ({{ site.date }})</li>
+            <li class="p-name">{{ site.version | escape }} ({{ site.time | date: "%Y-%m-%d" }})</li>
         </ul>
       </div>
       <div class="footer-col">
